# powerops

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/: __init__.py
backend/api/: __init__.py  main.py
backend/cli/: __init__.py  main.py
backend/core/: __init__.py  ai-agent-helpers.py  ai-agent.py  ai-code-assistant.py  ai-module-generator-helpers.py  ai-module-generator.py  ai-plan-explainer-service.py  ai-remediation-engine.py  ai-remediation-helpers.py  ai-template-studio-helpers.py  ai-template-studio.py  ami-resolver.py  auth-service.py  config.py  cost-estimator.py  dependency-resolver.py  drift-detector.py  environment-service.py  exceptions.py  github-app-client.py  hcl-file-io-helpers.py  hcl-file-manager-helpers.py  hcl-file-manager.py  hcl-validator.py  import-wizard.py  keycloak-auth-service.py  models.py  module-docs-generator.py  module-registry-manager.py  module-registry-parser.py  plan-analysis-helpers.py  policy-evaluator.py  project-config-parser.py  project-executor.py  project-permission-checker.py  project-scaffolder.py  project-template-engine.py  stack-composer.py  state-encryption.py  state-manager.py  (+15 more)
backend/db/: __init__.py  database.py  models.py
backend/kb/: __init__.py  curriculum-loader.py  lab-validator.py  leaderboard.py  (+2 more)
docs/: development-roadmap.md  project-changelog.md  system-architecture.md
frontend/: package-lock.json  package.json
keycloak/: realm-export.json
policies/: cost-threshold.rego  encryption-required.rego  instance-size-limits.rego  no-inline-iam.rego  no-public-s3.rego  required-tags.rego
tests/: __init__.py  conftest.py
(+335 files in other folders)
